--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
+    "finnhub": "^1.2.17",
     "firebase": "^8.2.0",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.5",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
